--- a/index.Rmd
+++ b/index.Rmd
@@ -17,32 +17,19 @@ The data used in this report was collected by the **Vera Institute**. According 
 
 ### Trends Over Time Chart
 
-Include a chart. Make sure to describe why you included the chart, and what patterns emerged
+I included this chart to create a visual for the data to display the growth of the prison population by race over time. The chart was designed this way to clearly show the differences in prison population among Black and White Americans. The chart shows that there has been a clear increase in total prison population since the 1980s and that the majority of the prison population has been disproportionately Black.
 
-The first chart that you will create and include will show the trend over time of your variable/topic. Think carefully about what you want to communicate to your user (you may have to find relevant trends in the dataset first!). Here are some requirements to help guide your design:
-
-- Show more than one, but fewer than ~10 trends
-  - This may mean showing the same measure for different locations or different racial groups. Think carefully about a meaningful comparison of locations (e.g., the top 10 counties in a state, top 10 states, etc.)
-- You must have clear x and y axis labels
-- The chart needs a clear title 
-- You need a legend for your different line colors and a clear legend title
-
-When we say "clear" or "human readable" titles and labels, that means that you should not just display the variable name.
-
-Here's an example of how to run an R script inside an RMarkdown file:
-
-```{r, echo = FALSE, code = readLines("chart1_example.R")}
+```{r, echo = FALSE, code = readLines("time_trend.R")}
+source("time_trend.R")
 ```
 
 ### Variable Comparison Chart
 
-Include a chart. Make sure to describe why you included the chart, and what patterns emerged
+I included this chart to highlight the steady increase in population rates for the total population from 1990-2010. The patterns that emerged were gradual dips and spikes but overall an increase in prison rates. This chart could potentially show the important affects of increased police activity or stricter government policies.
 
-The second chart that you will create and include will show how two different (continuous) variables are related to one another. Again, think carefully about what such a comparison means and what you want to communicate to your user (you may have to find relevant trends in the dataset first!). Here are some requirements to help guide your design:
-
-- You must have clear x and y axis labels
-- The chart needs a clear title 
-- If you choose to add a color encoding (not required), you need a legend for your different color and a clear legend title
+```{r, echo = FALSE, code = readLines("variable_comparison.R")}
+source("variable_comparison.R")
+```
 
 ### Map
 
