changing variable comparison chart, removing warning boxes, making edits

--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,7 @@ The data used in this report was collected by the **Vera Institute**. According 
 
 ### Trends Over Time Chart
 
-I included this chart to create a visual for the data to display the growth of the prison population by race over time. The chart was designed this way to clearly show the differences in prison population among Black and White Americans. The chart shows that there has been a clear increase in total prison population since the 1980s and that the majority of the prison population has been disproportionately Black.
+This chart was designed to display a visual representation of the growth of the prison population since 1990. The color coded lines also indicate the Black and White proportional makeup of the prison population in that year. One prominent pattern that emerged was the significant growth of the overall prison population after 1991. Since then it has steadily risen and fallen. Another pattern that you can see regards the racial demographics of the population. Although both populations have grown over time, the consistent majority dominating the prison populations is Black Americans. This displays disparities in incarceration when it comes to race.
 
 ```{r, echo = FALSE, code = readLines("time_trend.R")}
 source("time_trend.R")
@@ -25,7 +25,7 @@ source("time_trend.R")
 
 ### Variable Comparison Chart
 
-I included this chart to highlight the steady increase in population rates for the total population from 1990-2010. The patterns that emerged were gradual dips and spikes but overall an increase in prison rates. This chart could potentially show the important affects of increased police activity or stricter government policies.
+I included this chart to highlight disparities in Black and White Prison Populations in 2010 and visually display that data. Each dot is a location from the data set and it is placed on the graph wherever its corresponding Black and White prison population is. In a perfect world, the dots on the plot would be in a straight proportionate line from the bottom left to the top right. However, you can see on this plot when you study the scale and positioning of each dot that a majority of the points indicate a higher x-value (Black prison population) than y-value (White prison population). This shallowness of this plots' trend shows a disproportionate number of incarcerated Black Americans in an overwhelming majority of cities.
 
 ```{r, echo = FALSE, code = readLines("variable_comparison.R")}
 source("variable_comparison.R")
